[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/AudioMaster.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Sound Effects/Coin_Pickup.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/Sound Effects/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/BG Music/18 - While(true) [LOOP] {CONTEST}.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Sound Effects/LightningBolt.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/Sound Effects/Hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/Sound Effects/Cirrus.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/Sound Effects/PowerupPickup.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/Sound Effects/Button.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/Sound Effects/Bottled_Tempest.wav" type="AudioStream" id=10]

[node name="AudioMaster" type="Node2D"]
script = ExtResource( 1 )

[node name="CoinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.17

[node name="PlayerJumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BGAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LightningBoltAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PlayerHurtAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CirrusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PowerupPickupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="BottledTempestAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

